# hire_me_chatbot

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  ollama_init.sh  populate_database.py  pyproject.toml  query_chatbot.py  streamlit.py  todo.txt  utils.py
config/: config.yaml  logger.py
